--- a/config/database.yml
+++ b/config/database.yml
@@ -5,16 +5,29 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  encoding: unicode
+  adapter: mysql2
+  pool: 5
+  timeout: 5000
+  username: root
+  password: root
   host: localhost
 
 development:
   <<: *default
-  database: harvest_development
+  database: harvest_dev
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: harvest_test
 
-
+production:
+  <<: *default
+  adapter: mysql2
+  pool: 5
+  timeout: 5000
+  username: root
+  password: root
+  database: harvest_production
